# LMS_

./: locustfile.py  pyproject.toml  requirements.txt
config/: settings.py
locale/ru/LC_MESSAGES/: django.po
mainapp/: tests.py
templates/: base.html
