[tool.poetry]
name = "project-gb-lms"
version = "0.1.0"
description = ""
authors = ["Willy Wonka <Woodenehad9798740@yandex.ru>"]
readme = "README.md"
packages = [{include = "project_gb_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
isort = "^5.11.3"
black = "^22.12.0"
autoflake = "^2.0.0"
python-dotenv = "^0.21.0"
djlint = "^1.19.14"
django-markdownify = "^0.9.2"
djhtml = "^1.5.2"
pillow = "^9.4.0"
celery = "^5.2.7"
social-auth-app-django = "^5.0.0"
django-debug-toolbar = "^3.8.1"
django-redis = "^5.2.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


